--- a/externals/package.json
+++ b/externals/package.json
@@ -2,8 +2,8 @@
   "name": "webpack-demo14",
   "version": "1.0.0",
   "scripts": {
-    "dev": "../node_modules/.bin/webpack-dev-server --open",
-    "build": "../node_modules/.bin/webpack-dev-server"
+    "dev": "webpack-dev-server --open",
+    "build": "webpack"
   },
   "license": "MIT"
 }
